Gradle build script updated to build for Java/JavaFX 11+